app/assets/stylesheets/components/_resources.scss
#resource-bg {
  position: absolute;
  width: 100%;
  height: 100%;
  background: url('resource-header-bg.svg');
  mix-blend-mode: difference;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  top: 0;

  @media (min-width: $screen-lg) {
    height: 1400px;
    top: -90px;
    background-size: contain;
    background-position: top;
  }
}

#resource-message {
  color: #1C1919;
  font-family: "Open Sauce Sans";
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  max-width: 70%;
  text-align: center;

  .fw-light {
    font-weight: 400;
  }

  @media (max-width: $screen-sm) {
    font-size: 17px;

    .fw-light {
      font-size: 12px;
    }
  }

  @media (min-width: $screen-md) {
    font-size: 32px;
    text-align: left;
  }

  @media (min-width: $screen-lg) {
    font-size: 48px;
  }
}

#resources {
  #hero {
    margin-top: -90px;
    padding-top: 110px;
    border-bottom: 1px solid #CCC;
  }

  .search-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-shrink: 0;
    font-family: Inter;

    @media (max-width: $screen-sm) {
      margin-top: 20px;
      width: 100%;
    }
  }

  .search-icon {
    position: absolute;
    left: 20px;
  }

  .search-input {
    padding: 10px 24px 10px 50px;
    width: 485px;
    height: 80px;
    border-radius: 50px;
    border: 1px solid #979797;
    background: #FFF;
    border-width: 1px;

    &:focus {
      outline-color: $primary;
    }

    @media (max-width: $screen-sm) {
      height: 50px;
      padding: 10px 10px 10px 50px;
    }
  }

  .resources-list {
    .card-container-upper {
      display: grid;
      grid-template-columns: 1fr;

      @media (min-width: $screen-md) {
        grid-template-columns: 1fr 1fr;
      }
    }

    .card-container {
      display: grid;
        grid-template-columns: 1fr;

      @media (min-width: $screen-md) {
        grid-template-columns: 1fr 1fr;
      }

      @media (min-width: $screen-lg) {
        grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
      }
    }

    .count-badge {
      color: $primary;
      border: 1px solid $green-500;
      padding: 3px 15px 3px 15px;
      border-radius: 1332px;
      background-color: $green-200;
    }

    .featured-resource-card {
      position: relative;

      .overlay {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: rgba(0, 0, 0, 0.3);
        z-index: 0;
        border-radius: 23px;
      }

      .overlay ~ * {
        position: relative;
        z-index: 20;
        color: white;
      }

      a {
        text-decoration: none;
        color: white;
        text-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
      }

      border-radius: 24px;
      background-repeat: no-repeat;
      background-size: cover;
      background-position: center;

      &.card-recitations {
        background-image: url('resource-cards/audio.png');
      }

      &.card-mushaf-layouts {
        background-image: url('resource-cards/mushaf-layout.png');
      }
    }

    .featured-count-badge {
      border-radius: 1332px;
      background-color: #E0FAEC;
      color: #099a4d;
      font-weight: bold;
      padding: 2px 10px 2px 10px;
      border: 2px solid #56B599;
    }

    .resource-card {
      height: 550px;
      border-radius: 24px;
      position: relative;

      a {
        text-decoration: none;
        color: white;
      }

      .dropdown-toggle,
      .dropdown-item {
        color: black;
      }
    }

    .full-card {
      width: 100%;
      height: 558px;
      border-radius: 24px;
      background-size: cover;
      background-position: center;
    }
  }
}

#empty-results-message {
  font-size: 24px;
  color: #656565;
}

